# intelli_docs_ai

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  intellidocs_ai_implementation_guide.md  intellidocs_ai_project_plan.md  pyproject.toml
advanced/: intellidocs_ai_implementation_guide.md
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes_documents.py  (+3 more)
backend/tests/: conftest.py  test_api_documents.py  test_api_qa.py  test_chunker.py  test_citations.py  test_evaluation.py  test_extractor.py  test_llm_integration.py  test_local_embeddings.py  test_parser.py  test_phase2_status.py  test_phase3_hardening.py  test_phase4_document_state.py  test_phase4_processing_backend.py  test_phase4_upload_store.py  test_privacy_confidence.py  test_qa_metrics.py  test_rag_pipeline.py  test_ready.py  test_summarizer.py  test_upload_safety.py  test_vector_store.py
data/evaluation/: expected_extractions.jsonl  negative_questions.jsonl  questions.jsonl
data/sample_documents/: contract_northwind.txt  contract_southbridge.txt  invoice_acme.txt  invoice_brightwave.txt  invoice_globex.txt  invoice_meridian.txt  invoice_zenith.txt  memo_london_office.txt  policy_expense.txt  policy_remote_work.txt  policy_security.txt  report_q1_operations.txt  report_q2_finance.txt
docs/: architecture.md  demo_script.md  deployment_aws.md  dev_log.md  evaluation.md  limitations.md  privacy.md  resume_bullets.md
frontend/: Dockerfile  streamlit_app.py
migrations/: env.py
migrations/versions/: 0001_phase2_pgvector.py  0002_phase4_document_state.py
prompts/: answer_question.yaml  extract_fields.yaml  summarize_document.yaml
scripts/: generate_eval_dataset.py  run_evaluation.py  run_live_smoke.py  seed_database.py
worker/: __init__.py  tasks.py  worker.py
(+45 files in other folders)
