[project]
name = "intellidocs-ai"
version = "0.1.0"
description = "IntelliDocs AI document intelligence portfolio implementation."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]==0.49.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "python-multipart==0.0.32",
  "python-docx==1.2.0",
  "pdfplumber==0.11.9",
  "PyYAML==6.0.3",
  "httpx==0.28.1",
  "streamlit==1.58.0",
  "requests==2.34.2",
  "openai>=2.41.0",
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "alembic>=1.17,<2.0",
]

[project.optional-dependencies]
# Real semantic embeddings computed locally (no API key). Heavy (pulls torch),
# so it is opt-in: `uv sync --extra local-embeddings`.
local-embeddings = [
  "sentence-transformers>=3,<6",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "ruff>=0.9",
]

# Use the CPU-only torch build on Linux so the optional install stays lean and
# needs no GPU/CUDA. macOS/Windows resolve torch from PyPI as usual.
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# Scripts and Alembic env bootstrap sys.path before importing the app package.
"scripts/*" = ["E402"]
"migrations/*" = ["E402"]
# FastAPI dependency-injection idiom: File()/Depends() in argument defaults.
"backend/app/api/*" = ["B008"]
# Optional-extra test imports after pytest.importorskip.
"backend/tests/test_local_embeddings.py" = ["E402"]
